# biochatter-next

./: .bioserver.env.template  .env  .gitignore  .versionrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json
app/: constant.ts  page.tsx
app-config/: production.yml
app/api/: common.ts
app/client/: api.ts  datarequest.ts
app/components/: auth.tsx  button.tsx  chat.module.scss  chat.tsx  exporter.tsx  home.module.scss  home.tsx  input-range.tsx  kg.module.scss  kg.tsx  markdown.tsx  mask.tsx  rag-contextual-prompts-modal.tsx  rag.module.scss  rag.tsx  settings.tsx  sidebar.tsx  ui-lib.module.scss  ui-lib.tsx  welcome.tsx
app/config/: build.ts  server.ts
app/locales/: cn.ts  en.ts  es.ts  ru.ts  tr.ts
app/masks/: cn.ts  en.ts
app/store/: access.ts  chat.ts  config.ts  kg.ts  rag.ts
app/utils/: datatypes.ts  prodinfo.ts  rag.ts
biochatter-next/: .bioserver.env.template  .env  .gitignore  docker-compose.yml  next.config.mjs  package.json  server.ts
biochatter-next/app/: constant.ts  page.tsx
biochatter-next/public/: prompts.json
chatgse/: .bioserver.env.template  .env  .gitignore  docker-compose.yml  next.config.mjs  package.json  server.ts  tsconfig.json
chatgse/app/: constant.ts  (+2 more)
chatgse/biochatter-server/: Dockerfile  app.py  pyproject.toml
chatgse/biochatter-server/src/: constants.py  conversation_manager.py  document_embedder.py  utils.py
chatgse/biochatter-server/tests/: test_conversation_manager.py
config/: biochatter-next.yaml
scripts/: custom-version-updater.js
src-tauri/: tauri.conf.json
(+93 files in other folders)
